--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/style.css" />
     <title>Practice document</title>
   </head>
   
@@ -14,6 +14,6 @@
         <div class="child"></div>
       </div>
     </div>
-    <script src="./assets/js/script.js"></script>
+    <script src="/assets/script.js"></script>
   </body>
 </html>
